<resources>
    <string name="app_name" translatable="false">GB Bank</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="gbbank_description">Digital Bank To Manage Your Balance, Track Exchange Rates And Ease Your Life.</string>
    <string name="welcome_to_gb_bank">Welcome To GB Bank!</string>
    <string name="hey_welcome_back">Hey, Welcome Back!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_ve_missed_you">We\'ve Missed You..</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="lines" translatable="false">Lines</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="back">Back</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="create_your_own_account">Create Your Own Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="activation_link_will_be_sent_to_your_e_mail">Activation Link Will Be Sent To Your E-mail.</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="send">Send</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="_0_00" translatable="false">0.00</string>
    <string name="gel" translatable="false">₾</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount</string>
    <string name="add_to_balance">Add to balance</string>
    <string name="_0_0" translatable="false">0.0</string>
    <string name="home">Home</string>
    <string name="exchange">Exchange</string>
    <string name="crypto">Crypto</string>
    <string name="profile">Profile</string>
    <string name="top_50_cryptos">Top 50 Cryptos</string>
    <string name="convert">Convert</string>
    <string name="refresh">Refresh</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="currency">Currency Rates</string>
    <string name="textview_usd" translatable="false">20 USD</string>
    <string name="zerogel" translatable="false">0.0000₾</string>
    <string name="cardchip" translatable="false">cardchip</string>
    <string name="rank">Rank</string>
    <string name="_1" translatable="false">1</string>
    <string name="_0_2828" translatable="false">-0.2828%</string>
    <string name="_48661_0" translatable="false">48661.0$</string>
    <string name="high_24h">High 24h</string>
    <string name="sb_type_valid_number">Please type valid number!</string>
    <string name="currency_name">Currency</string>
    <string name="low_24h">Low 24h</string>
    <string name="change_password">Change Password</string>
    <string name="app_information">App Information</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>
    <string name="image_url">Image URL</string>
    <string name="new_password">New password</string>
    <string name="logo_description" translatable="false">Logo</string>
    <string name="application_by">Application by:</string>
    <string name="giorgi_dolidze_amp_bachana_mosulishvili"><![CDATA[Giorgi Dolidze & Bachana Mosulishvili]]></string>
    <string name="desc_profile_picture" translatable="false">Profile Picutre</string>
    <string name="usd" translatable="false">$</string>
    <string name="description_p2" translatable="true"><![CDATA[⚡ Developers: Giorgi Dolidze & Bachana Mosulishvili]]></string>
    <string name="description_p3" translatable="true">Version: </string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="password_changed">Password Changed</string>
    <string name="quit">Quit</string>
    <string name="profile_photo_changed">Profile Photo Changed</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="transfer">Transfer</string>
</resources>