<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.deposit.DepositFragment">

    <LinearLayout
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/back"
            android:background="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1.5dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/back"
            android:textColor="?attr/applicationPrimaryColor"
            tools:textColor="@color/application_primary_color"
            android:textSize="19sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivDeposit"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/deposit"
            android:background="@drawable/ic_deposit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/deposit"
            android:textColor="?attr/primaryTextColor"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/amount"
            app:counterEnabled="true"
            app:counterMaxLength="7"
            app:endIconContentDescription="@string/logo"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAmount"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddToBalance"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/poppinsmedium"
            android:letterSpacing="0"
            android:text="@string/add_to_balance"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:alpha="0.9"
        android:background="@drawable/rectangle_shape"
        android:elevation="15dp"
        android:padding="10dp"
        android:visibility="invisible" />

</FrameLayout>